--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>次に読むべき一冊</title>
+    <title>次に読む一冊</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   </head>
@@ -14,9 +14,9 @@
       <div class="row mb-4">
         <div class="col-12 text-center">
           <h1 class="display-4 text-primary mb-3">
-            <i class="fas fa-book-open me-2"></i>次に読むべき一冊
+            <i class="fas fa-book-open me-2"></i>次に読む一冊
           </h1>
-          <p class="lead text-muted">お気に入りの本から、あなたにぴったりの次の一冊を見つけましょう</p>
+          <p class="lead text-muted">あなたにぴったりの次の一冊を見つけましょう</p>
         </div>
       </div>
 
