HTMLファイルのコメントを日本語に翻訳し、各セクションの説明を改善

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container-fluid py-4">
-      <!-- Header -->
+      <!-- ヘッダー部分 -->
       <div class="row mb-4">
         <div class="col-12 text-center">
           <h1 class="display-4 text-primary mb-3">
@@ -20,7 +20,7 @@
         </div>
       </div>
 
-      <!-- Book Input Section -->
+      <!-- 本の入力セクション -->
       <div class="row justify-content-center mb-4">
         <div class="col-lg-8">
           <div class="card shadow-sm">
@@ -50,7 +50,7 @@
         </div>
       </div>
 
-      <!-- Loading Indicator -->
+      <!-- ローディング表示 -->
       <div id="loading" class="text-center d-none">
         <div class="spinner-border text-primary" role="status">
           <span class="visually-hidden">検索中...</span>
@@ -58,7 +58,7 @@
         <p class="mt-2">本を検索しています...</p>
       </div>
 
-      <!-- Search Results Section -->
+      <!-- 検索結果セクション -->
       <div id="results-section" class="d-none">
         <div class="row mb-3">
           <div class="col-12">
@@ -68,13 +68,13 @@
         </div>
         <div id="search-results" class="row"></div>
         
-        <!-- Pagination -->
+        <!-- ページネーション -->
         <nav aria-label="検索結果のページネーション">
           <ul id="pagination" class="pagination justify-content-center mt-4"></ul>
         </nav>
       </div>
 
-      <!-- Favorites Section -->
+      <!-- お気に入りセクション -->
       <div id="favorites-section" class="d-none">
         <div class="row mb-3">
           <div class="col-12">
